--- a/style.css
+++ b/style.css
@@ -1,4 +1,48 @@
-h1{
-    color: green;
-    b
+/* Variabes */
+/* Mixin's */
+body {
+  background: #c4e7b9;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.wrapper {
+  color: #eeadad;
+  text-align: center;
+}
+
+h1, h2, h3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 2.6em;
+  text-transform: uppercase;
+}
+
+#seconds, #tens {
+  font-size: 2em;
+}
+
+button {
+  border-radius: 5px;
+  -khtml-border-radius: 5px;
+  background: #8392c4;
+  color: #fff;
+  border: solid 1px #fff;
+  border-radius: 20px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 1rem 1rem;
+  width: 12rem;
+  margin: 2rem;
+  outline: none;
+}
+button:hover {
+  transition: all 0.5s ease-in-out;
+  background: #ddbebe;
+  border: solid 1px #2b2727;
+  color: #a05a5a;
+}/*# sourceMappingURL=style.css.map */
