--- a/style.css
+++ b/style.css
@@ -1,48 +1,67 @@
-/* Variabes */
-/* Mixin's */
+:root {
+    --main-color: #d4326b;
+}
+
+@font-face {
+    font-family: fasthand;
+    src: url(./font-fasthand/Fasthand-Regular.ttf);
+}
+
 body {
-  background: #c4e7b9;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    background-color: antiquewhite;
+    font-family: fasthand;
+    line-height: 1.3rem;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
 }
 
-.wrapper {
-  color: #eeadad;
-  text-align: center;
+.avatar {
+    width: 50vh;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-size: cover;
 }
 
-h1, h2, h3 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-size: 2.6em;
-  text-transform: uppercase;
+.open, .close-btn {
+    border: none;
+    font-size: 2rem;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    border-radius: 10rem;
+    color: white;
+    background-color: var(--main-color);
 }
 
-#seconds, #tens {
-  font-size: 2em;
+.modal-container {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.35);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+
+
+
 }
 
-button {
-  border-radius: 5px;
-  -khtml-border-radius: 5px;
-  background: #8392c4;
-  color: #fff;
-  border: solid 1px #fff;
-  border-radius: 20px;
-  text-decoration: none;
-  cursor: pointer;
-  font-size: 1.2em;
-  padding: 1rem 1rem;
-  width: 12rem;
-  margin: 2rem;
-  outline: none;
+.document {
+    width: 50vh;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
 }
-button:hover {
-  transition: all 0.5s ease-in-out;
-  background: #ddbebe;
-  border: solid 1px #2b2727;
-  color: #a05a5a;
-}/*# sourceMappingURL=style.css.map */
+
+.close-btn {
+    margin-left: 90vh;
+}
+
+.show {
+    opacity: 1;
+    pointer-events: visible;
+}
