--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 body {
     background-color: antiquewhite;
     font-family: fasthand;
-    line-height: 1.3rem;
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -23,38 +22,40 @@ body {
     width: 50vh;
     aspect-ratio: 1/1;
     border-radius: 50%;
-    background-size: cover;
+    object-fit: cover;
 }
 
 .open, .close-btn {
     border: none;
     font-size: 2rem;
     color: white;
-    outline: none;
     cursor: pointer;
     border-radius: 10rem;
     color: white;
     background-color: var(--main-color);
+    padding: 1rem;
 }
 
 .modal-container {
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(0, 0, 0);
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     pointer-events: none;
     transition: all 0.3s ease-in-out;
     opacity: 0;
-
-
-
+    padding: 4rem;
+    width: 50vw;
+    height: 70vh;
 }
 
 .document {
     width: 50vh;
     border-radius: 50%;
     aspect-ratio: 1/1;
+    object-fit: cover;
 }
 
 .close-btn {
